fix: img overflow

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -25,11 +25,11 @@ Table of Contents
 @media(max-width: 1166px) {
 	.img-container{
 		height: 100vh;
-		width: 100%;
 		position: absolute;
 		top:0;
 		right: 0;
 		width: 25vw;
+		overflow: hidden;
 	}
 	
 	/* .item-img.hero-img{
@@ -43,6 +43,7 @@ Table of Contents
 @media(max-width: 376px) {
 	.img-container{
 		width: 35vw;
+		overflow: hidden;
 	}
 	.logo{
 		width: 190px;
